# tts-mcp-server

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  render.yaml  requirements.txt  run.py
api/: app.py  models.py
api/routes/: audio.py  logs.py  projects.py  root.py  tts.py  visuals.py  voices.py
api/tests/: test_routes_misc.py  test_routes_projects.py  test_routes_tts.py
app/: config.py  main.py
app/core/: files.py  logging.py  tts.py  visual.py
app/core/vlogshot/: badges.py  cli.py  render.py  render_terminal.py  svgkit.py  zipextract.py
app/mcp/: handlers.py  sse_asgi.py  streamable_http_asgi.py  tools.py
app/models/: schemas.py
app/routes/: audio.py  logs.py  root.py  tts.py  visuals.py  voices.py
common/: config.py  files.py  formatting.py  logging.py  project_store.py
mcp_layer/: errors.py  registry.py  server.py  sse_asgi.py  streamable_http_asgi.py
mcp_layer/tests/: test_mcp_handlers.py  test_mcp_transport.py
tests/: test_files.py  test_formatting.py  test_mcp_handlers.py  test_mcp_transport.py  test_project_store.py  test_routes_misc.py  test_routes_tts.py  test_tts_core.py  test_visual_core.py
tools/video_renderer/: README.md  core.py  handler.py  schema.py
tools/video_renderer/tests/: test_render_core.py
tools/visual_creator/: README.md  core.py  handler.py  rasterize.py  schema.py
tools/visual_creator/tests/: test_rasterize.py  test_visual_core.py
tools/visual_creator/vlogshot/: __init__.py  checklist.py  cli.py  codeutils.py  pathresolve.py  (+3 more)
tools/voice_over/: README.md  core.py  handler.py  schema.py
(+1 files in other folders)
