[project]
name = "voiceover-mcp-server"
version = "3.0.0"
description = "Text-to-speech MCP server (SSE) with REST API, single voice_over tool, temp-storage backed."
requires-python = ">=3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
