[project]
name = "voiceover-mcp-server"
version = "3.0.0"
description = "MCP server (Streamable HTTP + legacy SSE) with REST API: voice_over (text-to-speech) and visual_creator (coding-vlog code/terminal screenshots), both temp-storage backed."
requires-python = ">=3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "tools", "mcp_layer", "api"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
